Inserindo Nome Poke

--- a/Pokedex.html
+++ b/Pokedex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta charset="UTF-8" viewport>
+<meta charset="UTF-8">
 <link rel="stylesheet" href="Style.css">
 <html lang="pt" >
     <title>Pokedex</title>
@@ -10,7 +10,12 @@
 </div>
 <div id="pokemon">
     <img class="Gastly" src="https://img.pokemondb.net/sprites/sword-shield/normal/gastly.png" alt="Gastly">
+    
 </div>
+<div>
+    <p class="nome">Gastly</p>
+</div>
+
 </body>
 <footer></footer>
 </html>
