--- a/Pokedex.html
+++ b/Pokedex.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="Style.css">
-<html lang="pt" >
-    <title>Pokedex</title>
-<head> </head>
-<body>
-    <div id="pokedex">
-        <img src="TemplatePoke.jpg" alt="Pokedex">
-</div>
-<div id="pokemon">
-    <img class="Gastly" src="https://img.pokemondb.net/sprites/sword-shield/normal/gastly.png" alt="Gastly">
-    
-</div>
-<div>
-    <p class="nome">Gastly</p>
-</div>
+<html lang="pt">
 
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="Style.css">
+    <title>Pokedex</title>
+</head>
+
+<body>
+    <header>
+    </header>
+    <main>
+        <img class="topo" src="Base.png" alt="Topo">
+        <img class="base" src="Base.png" alt="Base">
+    </main>
+    <footer>
+    </footer>
 </body>
-<footer></footer>
+
 </html>
