--- a/Pokedex.html
+++ b/Pokedex.html
@@ -30,6 +30,8 @@
                     setTimeout(function () {
                         pokemon.style.animation = "aparecePoke 1s forwards";
                         pokemon.style.display = "block";
+                        texto.style.animation = "aparecePoke 1s forwards";
+                        texto.style.display = "block";
                     }, 1000);
                 });
             </script>
