--- a/Pokedex.html
+++ b/Pokedex.html
@@ -16,17 +16,25 @@
             <div id="fundo">
                 <div id="pokemon">
                     <img class="poke" alt="poke">
+
                 </div>
                 <div id="texto">
                     <span class="nome"> </span>
+                    <button id="setaE"></button>
+                    <button id="setaD"></button>
                     <p></p>
                 </div>
             </div>
             <img class="base" src="Base.png" alt="Base">
+
             <button id="abrirDex">o</button>
-            <script> abrirDex.addEventListener("click", function () {
+            <script>
+                abrirDex.addEventListener("click", function () {
                     fundo.style.animation = "changeSizeBackground 0.5s forwards";
                     abrirDex.style.display = 'none';
+                    var audio = new Audio('music.mp3');
+                    audio.volume = 0.1;
+                    audio.play();
                     setTimeout(function () {
                         pokemon.style.animation = "aparecePoke 1s forwards";
                         pokemon.style.display = "block";
@@ -36,23 +44,35 @@
                 });
             </script>
             <script>
-
-                const pokemonName =  document.querySelector('.nome');
-                const pokemonNumber =  document.querySelector('.numero');
+                var pokem = 1;
+                const pokemonName = document.querySelector('.nome');
+                const pokemonNumber = document.querySelector('.numero');
                 const pokemonImg = document.querySelector('.poke')
-                
+
                 const fetchPokemon = async (pokemon) => {
                     const APIResponse = await fetch(`https://pokeapi.co/api/v2/pokemon/${pokemon}`);
-                        const data = await APIResponse.json();
-                        return data;
+                    const data = await APIResponse.json();
+                    return data;
                 }
                 const renderPokemon = async (pokemon) => {
                     const data = await fetchPokemon(pokemon);
                     console.log(data);
-                    pokemonName.innerHTML = data.id + " " + data.name;
+                    if (data.id < 10) {
+                        pokemonName.innerHTML = "00" + data.id + " " + data.name;
+                    } else if (data.id < 100) {
+                        pokemonName.innerHTML = "0" + data.id + " " + data.name;
+                    } else {
+                        pokemonName.innerHTML = data.id + " " + data.name;
+                    }
                     pokemonImg.src = data['sprites']['versions']['generation-v']['black-white']['animated']['front_default'];
                 }
-                renderPokemon('2')
+                renderPokemon(pokem)
+                setaE.addEventListener("click", function () {
+                    renderPokemon(pokem--);
+                });
+                setaD.addEventListener("click", function () {
+                    renderPokemon(pokem++);
+                });
             </script>
         </div>
 
