--- a/Pokedex.html
+++ b/Pokedex.html
@@ -19,7 +19,8 @@
 
                 </div>
                 <div id="texto">
-                    <span class="nome"> </span>
+                    <span class="nome"></span>
+                    <span class="descricao"></span>
                     <button id="setaE"></button>
                     <button id="setaD"></button>
                     <p></p>
@@ -51,8 +52,11 @@
 
                 const fetchPokemon = async (pokemon) => {
                     const APIResponse = await fetch(`https://pokeapi.co/api/v2/pokemon/${pokemon}`);
+                    const APIDescription = await fetch(`https://pokeapi.co/api/v2/pokemon-species/${pokemon}`)
                     const data = await APIResponse.json();
+                    const descrip = await APIDescription.json();
                     return data;
+                    return descrip;
                 }
                 const renderPokemon = async (pokemon) => {
                     const data = await fetchPokemon(pokemon);
@@ -64,6 +68,7 @@
                     } else {
                         pokemonName.innerHTML = data.id + " " + data.name;
                     }
+                    pokemonDesc.innerHTML = data.description
                     pokemonImg.src = data['sprites']['versions']['generation-v']['black-white']['animated']['front_default'];
                 }
                 renderPokemon(pokem)
