--- a/Pokedex.html
+++ b/Pokedex.html
@@ -15,14 +15,16 @@
             <img class="topo" src="Base.png" alt="Topo">
             <div id="fundo">
                 <div id="pokemon">
-                    <img class="poke" alt="poke">
+                    <button id="setaE"></button>
+                    <button id="setaD"></button>
+                    <div id="hitbox">
+                        <img class="poke" alt="poke">
+                    </div>
 
                 </div>
                 <div id="texto">
                     <span class="nome"></span>
                     <span class="descricao"></span>
-                    <button id="setaE"></button>
-                    <button id="setaD"></button>
                     <p></p>
                 </div>
             </div>
@@ -74,7 +76,15 @@
                     } else {
                         pokemonName.innerHTML = data.id + " " + data.name;
                     }
-                    pokemonDesc.innerHTML = descrip.flavor_text_entries[40].flavor_text;
+                    let i = 0;
+                    while (i != -1) {
+                        if (descrip.flavor_text_entries[i].language.name == 'en' && descrip.flavor_text_entries[i].version.name == 'omega-ruby') {
+                            pokemonDesc.innerHTML = descrip.flavor_text_entries[i].flavor_text;
+                            i = -1;
+                        } else {
+                            i++;
+                        }
+                    }
                     pokemonImg.src = data['sprites']['versions']['generation-v']['black-white']['animated']['front_default'];
                 }
                 renderPokemon(pokem)
